# kigs

framework/: CMakeLists.txt
framework/2DLayers/: CMakeLists.txt
framework/2DLayers/Headers/: Node2D.h
framework/2DLayers/Sources/: BaseUI2DLayer.cpp  Module2DLayers.cpp  Node2D.cpp  all.cpp
framework/Box2DBind/: CMakeLists.txt
framework/Box2DBind/Headers/: Box2DBindModule.h  Box2DBody.h  Box2DShape.h
framework/Box2DBind/Sources/: Box2DBody.cpp  (+3 more)
framework/Collision/: CMakeLists.txt
framework/Core/: CMakeLists.txt
framework/CoreAnimation/: CMakeLists.txt
framework/CoreDataDrivenSequence/: CMakeLists.txt
framework/FileManager/: CMakeLists.txt
framework/GUI/: CMakeLists.txt
framework/GenericAnimation/: CMakeLists.txt
framework/HTTPRequest/: CMakeLists.txt
framework/ImGui/: CMakeLists.txt
framework/Input/: CMakeLists.txt
framework/LuaKigsBind/: CMakeLists.txt
framework/Renderer/: CMakeLists.txt
framework/SceneGraph/: CMakeLists.txt
framework/Thread/: CMakeLists.txt
framework/Timer/: CMakeLists.txt
framework/TinyImage/: CMakeLists.txt
framework/XML/: CMakeLists.txt
libs/: CMakeLists.txt
projects/: CMakeLists.txt  CreateNewConsoleProject.sh  CreateNewDDProject.sh
projects/MacOSConsole/: CMakeLists.txt  index.html  indexDebug.html
projects/MacOSConsole/Headers/: KigsApplication.h  MacOSConsole.h
projects/MacOSConsole/Sources/: MacOSConsole.cpp
projects/MacOSConsole/assets/: AppInit.xml  LaunchScreen.xml  Screen_Main.xml
scripts/: CMakeLists.txt  generateMacOS.sh  generateMacOSMake.sh
tools/AssetManager/: CMakeLists.txt
(+67 files in other folders)
