project(MacOSConsole)

add_executable(MacOSConsole "")
set(MacOSConsole_GUID_CMAKE "E2ADED57-2DE1-465A-AFA2-80C8A09C82E8" CACHE INTERNAL "MacOSConsole GUID")

if(${KIGS_PLATFORM} STREQUAL "Windows")
	set(CMAKE_SHARED_LINKER_FLAGS_STATICDEBUG "${CMAKE_SHARED_LINKER_FLAGS_STATICDEBUG} /SUBSYSTEM:CONSOLE /SAFESEH:NO /DEBUG:FULL")
	set(CMAKE_SHARED_LINKER_FLAGS_STATICRELEASE "${CMAKE_SHARED_LINKER_FLAGS_STATICRELEASE} /SUBSYSTEM:CONSOLE /SAFESEH:NO")
	set(CMAKE_SHARED_LINKER_FLAGS_STATICRELEASETOOLS "${CMAKE_SHARED_LINKER_FLAGS_STATICRELEASETOOLS} /SUBSYSTEM:CONSOLE /DEBUG:FULL /SAFESEH:NO")
endif()

target_link_libraries(MacOSConsole PUBLIC BaseApplication)
target_include_directories(MacOSConsole PRIVATE "Headers")

file(GLOB_RECURSE all_sources "Sources/*.cpp")
file(GLOB_RECURSE all_headers "Headers/*.h")

target_sources(MacOSConsole 
	PRIVATE 
		${all_sources}
		${all_headers}
		)

set_property(TARGET MacOSConsole PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/assets")

